tests/miniJava/neg/005429_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { int [] java public int [] java ( ) { return 0 ; } ; }
